--- a/Tasks_to_accomplish-1.ipynb
+++ b/Tasks_to_accomplish-1.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "consider a heterogeneous nested list of size N. Find the number of sub lists presenst in a nested list  then find the sub list with maximum length and its index value "
+    "consider a heterogeneous nested list of size N. Find the number of sub lists present in that nested list  then find the sub list with maximum length and its index value "
    ]
   },
   {
